syntax = "proto3";
package path;

option go_package = "github.com/buildwithgrove/path/observation";

import "path/http.proto";
import "path/gateway.proto";
import "path/protocol/protocol.proto";
import "path/qos/qos.proto";

// RequestResponseObservations captures the observations made on every aspect of a service
// request and its response.
// e.g. service's QoS observations, protocol instance's observations, etc.
message RequestResponseObservations {
  // service_id is the target service ID of the request.
  string service_id = 1;
  // HTTPRequestObservations captures all the observations made on the incoming HTTP request.
  // e.g. the request's payload size.
  HTTPRequestObservations http_request = 2;
  // GatewayObservations is the set of all gateway-level observations related to the request.
  // e.g. whether the request was from a user or generated by the endpoint hydrator.
  GatewayObservations gateway = 3;
  // ProtocolObservations is the set of protocol-level observations made on the request.
  // e.g. the block_height at which the request was served.
  protocol.Observations protocol = 4;
  // QoSObservations is the set of QoS-level observations made on the request.
  // e.g. the serving endpoint's response to a `eth_chainId` request.
  qos.Observations qos = 5; 
}
